# auth-module

./: .gitignore  Dockerfile  Makefile  README.md  developer_guide.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
lib/: .env  __init__.py  config.py  models.py  schemas.py  test_models.py
lib/controllers/: auth_controller.py  social_controller.py
lib/services/: auth_service.py  hashing_service.py  social_service.py  test_auth_service.py  token_service.py
lib/utils/: dependencies.py  user_repository.py
models/auth/: interfaces.py
server/http/: interfaces.py  router.py
server/http/auth/: router.py
