[tool.poetry]
name = "auth-module"
version = "0.1.0"
description = "The Authentication Module manages user identity and access control."
authors = ["Ssejjemba Dan <ssejjembadan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
bcrypt = "^4.2.1"
jwt = "^1.3.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
